--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <parent>
+        <groupId>org.kantega.opensource-parent</groupId>
+        <artifactId>opensource-parent</artifactId>
+        <version>1.1</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kantega.openaksess</groupId>
     <artifactId>aksessplugin-maven-plugin</artifactId>
@@ -47,4 +54,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.0-beta-9</version>
+                <configuration>
+                    <remoteTagging>true</remoteTagging>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <goals>deploy</goals>
+                    <username>hudson</username>
+                    <password>${hudson.password}</password>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
