--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.kantega.opensource-parent</groupId>
@@ -27,7 +26,7 @@
     <groupId>org.kantega.openaksess</groupId>
     <artifactId>aksessplugin-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>OpenAkess plugin Maven plugin</name>
 
     <description>
@@ -69,4 +68,8 @@
             </plugin>
         </plugins>
     </build>
+
+  <scm>
+    <connection>scm:svn:https://opensource.kantega.no/svn/opensource-parent/tags/aksessplugin-maven-plugin-1.0</connection>
+  </scm>
 </project>
