--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,12 @@
     <groupId>org.kantega.openaksess</groupId>
     <artifactId>aksessplugin-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>OpenAkess plugin Maven plugin</name>
+
+    <scm>
+        <connection>scm:svn:https://opensource.kantega.no/svn/oaplugin-maven-plugin/trunk/</connection>
+    </scm>
 
     <description>
         Maven plugin for developing and deploying OpenAksess plugins
