--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.kantega.openaksess</groupId>
-    <artifactId>aksessplugin-maven-plugin</artifactId>
+    <artifactId>oap-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <version>1.1-SNAPSHOT</version>
     <name>OpenAkess plugin Maven plugin</name>
