--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
     <groupId>org.kantega.openaksess</groupId>
     <artifactId>oap-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.8</version>
     <name>OpenAkess plugin Maven plugin</name>
 
     <scm>
-        <connection>scm:svn:https://opensource.kantega.no/svn/oaplugin-maven-plugin/trunk/</connection>
+        <connection>scm:svn:https://opensource.kantega.no/svn/oaplugin-maven-plugin/tags/oap-maven-plugin-1.8</connection>
     </scm>
 
     <description>
